Adapt interfaces for future use of object mapper.